cleaned up code

--- a/suwen-ng.html
+++ b/suwen-ng.html
@@ -1,235 +1,25 @@
-<!-- SUTD MArc Template – V1.0  -->
-<!-- Please read the guide before editing -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- <base href="/projects/"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-
-	<link rel="stylesheet" href="./data/w3.css">
-    <link rel="stylesheet" href="../../student-style.css">
+	<link rel="stylesheet" href="w3.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-      $(function() {
-        $("#header").load("../../headernav.html");
-        $("#footer").load("../../footer.html");
-
-      });
-
-        function goToTop(){
-        window.scrollTo(0,0)
-        return false; //prevent page from reloading
-        }
-    </script>
+	<script src="../../js/randomiser.js"></script>
+	<script src="../../js/title.js"></script>
+	<script src="https://static.elfsight.com/apps/before-and-after-slider/release/fe82e1ba-be9e-4b44-861d-c6c4b3497c56/app/beforeAndAfterSlider.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
-<style>
-
-    h5 {
-    width: 70vw;
-    margin-top: 2vh;
-	font-size: 4rem;
-    }
-    h6 {
-	color: #4f4f4f;
-	font-size: 2rem;
-	font-weight: bold;
-    }
-    .navimg {
-	width: 100%;
-	height: 100px;
-	overflow: hidden;
-	display: inline-block;
-	background-position: center !important;
-	background-repeat: no-repeat !important;
-    }
-    .nav {
-	width: 250px;
-	margin: 5%;
-	display: inline-block;
-	vertical-align: top;
-	text-decoration: none;
-    }
-    .colorblock {
-	background: #fafafa;
-	padding: 5% 0;
-	clear: both;
-    }
-    .colorblock-white{
-	background: #ffffff;
-	padding: 5% 0;
-	clear: both;
-    }
-    defi {
-	font-size: 10pt;
-	color: #8d8f9b;
-	text-transform: none;
-	font-family: roboto;
-	font-style: italic;
-    }
-	defi a {
-	color: #9aa1a3;
-	text-decoration: none;
-    }
-	.text-container {
-	max-width: 1100px;
-	position: relative;
-	padding-bottom: 5vh;
-	margin: auto;
-	}		
-    body {
-        background-color: pink;
-        background-color: rgb(231, 231, 231);
-        background-color: rgb(183, 251, 253);
-        background-color: rgb(206, 253, 162);
-        background-color: rgb(255, 226, 192);
-        background-color: white;
-    }
-
-
-	html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-	}
-	.bgimg-1, .bgimg-2 {
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	}
-	.bgimg-1 {
-	background-image: url("./data/Overall.gif");
-	min-height: 100%;
-	}
-	.bgimg-2 {
-	background-image: url("./data/Facade.jpg");
-	min-height: 600px;
-	}
-	@media only screen and (max-width: 1000px) {
-	.bgimg-1, .bgimg-2 {
-		background-attachment: scroll;
-		min-height: 200px;}
-	}
-	@media only screen and (max-width: 1500px) {
-	h5 {
-	font-size:2rem;
-	}
-	h6 {
-	font-size:1.3rem;
-	}
-	}
-	.arrow {
-	border: solid black;
-	border-width: 0 3px 3px 0;
-	display: inline-block;
-	padding: 3px;
-	transform: rotate(45deg);
-	transform: rotate(45deg);
-	cursor: pointer;
-	}
-	
-
-	/* Slideshow container */
-	.slideshow-container {
-	max-width: 1100px;
-	position: relative;
-	margin: auto;
-	}
-
-	/* Next & previous buttons */
-	.prev, .next {
-	cursor: pointer;
-	position: absolute;
-	top: 50%;
-	width: auto;
-	padding: 16px;
-	margin-top: -22px;
-	color: black;
-	font-weight: bold;
-	font-size: 18px;
-	transition: 0.6s ease;
-	border-radius: 0 3px 3px 0;
-	user-select: none;
-	}
-
-	/* Position the "next button" to the right */
-	.next {
-	right: 0;
-	border-radius: 3px 0 0 3px;
-	}
-
-	/* On hover, add a black background color with a little bit see-through */
-	.prev:hover, .next:hover {
-	background-color: rgba(229,229,229,1);
-	}
-
-	/* Caption text */
-	.text {
-	color: #4f4f4f;
-	font-size: 14px;
-	padding: 8px 0px;
-	position: absolute;
-	bottom: 8px;
-	width: 100%;
-	text-align: center;
-	background-color: white;
-	opacity: 0.8;
-	}
-
-	/* Number text (1/3 etc) */
-	.numbertext {
-	color: #4f4f4f;
-	font-size: 15px;
-	padding: 8px 12px;
-	position: absolute;
-	top: 0;
-	}
-
-	/* Fading animation */
-	.fade {
-	-webkit-animation-name: fade;
-	-webkit-animation-duration: 1s;
-	animation-name: fade;
-	animation-duration: 1s;
-	}
-
-	@-webkit-keyframes fade {
-	from {opacity: .4} 
-	to {opacity: 1}
-	}
-
-	@keyframes fade {
-	from {opacity: .4} 
-	to {opacity: 1}
-	}
-
-	/* On smaller screens, decrease text size */
-	@media only screen and (max-width: 800px) {
-	.prev, .next,.text {font-size: 10px}
-	}
-	
-	
-</style>
-
 <body >
-    <div id="header"></div>
-	
 	<div class="bgimg-1 w3-display-container w3-opacity-min"></div>
-	
-    <section class="content">
-	
     <div  class="titletext">
          Living Building: <br><h5>Growing Tropical Architecture Through Grafting and Inosculation</h5>
     </div>
-
     <div class="twocols invert">
         <div class="abstract">
             <h2>Summary</h2>
@@ -247,16 +37,13 @@
 
         <div class="table">
             <div class="thumb">
-                <img src="./suwen-ng.jpg" alt="">
+                <img src="assets/suwen-ng.jpg" alt="">
 			</div>
 			
             <div class="fields">
                 <h3>Name</h3>
                 <p>Ng Su Wen</p>
 			</div>
-			
-            <div class="fields">
-            </div>
 			
             <div class="fields">
                 <h3>Typology</h3>
@@ -298,7 +85,7 @@
 		<div class="gifs">
 			<div class="w3-col m3">
 				<div class="nav" style="width:90%">
-					<div class="navimg" style="background: url('./data/navi1.png');"></div>
+					<div class="navimg" style="background: url('assets/navi1.png');"></div>
 					<center><br>Proposal 1<br><br>
 					<defi>A column system that comprises of a metal scaffolding structure with plants growing around it.</defi><br><br>
 					<a href="#p1"><div class="arrow"></div></center></a>
@@ -306,7 +93,7 @@
 			</div>
 			<div class="w3-col m3">
 				<div class="nav" style="width:90%">
-					<div class="navimg" style="background: url('./data/navi2.png');"></div>
+					<div class="navimg" style="background: url('assets/navi2.png');"></div>
 					<center><br>Proposal 2<br><br>
 					<defi>A facade system that comprises of a metal scaffolding structure with plants growing around it.</defi><br><br>
 					<a href="#p2"><div class="arrow"></div></center></a>
@@ -314,7 +101,7 @@
 			</div>
 			<div class="w3-col m3">
 				<div class="nav" style="width:90%">
-					<div class="navimg" style="background: url('./data/navi3.png');"></div>
+					<div class="navimg" style="background: url('assets/navi3.png');"></div>
 					<center><br>Proposal 3<br><br>
 					<defi>A floor system that is formed by threading aerial roots through the cross-bracings in the floor.</defi><br><br>
 					<a href="#p3"><div class="arrow"></div></center></a>
@@ -335,48 +122,48 @@
 
 			<div class="mySlides1 fade">
 				<div class="numbertext">1 / 8</div>
-				<img src="./data/ColumnSky.gif" style="width:100%">
+				<img src="assets/ColumnSky.gif" style="width:100%">
 			</div>
 
 			<div class="mySlides1 fade">
 				<div class="numbertext">2 / 8: Proposed Structure</div>
-				<img src="./data/Column1.png" style="width:100%">
+				<img src="assets/Column1.png" style="width:100%">
 				<div class="text">The proposed structure consists of bracings in the floor that connect to the metal scaffolding of the columns. The structural stability is improved with the addition of trees fused with the scaffolding.</div>
 			</div>
 
 			<div class="mySlides1 fade">
 				<div class="numbertext">3 / 8: Light Shaft</div>
-				<img src="./data/Column2.png" style="width:100%">
+				<img src="assets/Column2.png" style="width:100%">
 				<div class="text">For the columns to act as a light shaft for the plants, it needs to be wide enough to allow sufficient light in. The exploration finds the diameter of columns required at different height. The floor area is fixed at 2400sqm and floor efficiency is kept above 60%. Daylight autonomy on the ground floor is tested for a target illuminance of 500 lux. Once the height reaches above 75m, it is not efficient to increase the diameter of column further.</div>
 			</div>
 			
 			<div class="mySlides1 fade">
 				<div class="numbertext">4 / 8: Alternative Lighting</div>
-				<img src="./data/Column3.png" style="width:100%">
+				<img src="assets/Column3.png" style="width:100%">
 				<div class="text">For buildings that are too tall to have natural sunlight reach the lower levels, channeled sunlight and artificial lighting can be used instead to ensure survivability of the plants on the lower levels. </div>
 			</div>
 
 			<div class="mySlides1 fade">
 				<div class="numbertext">5 / 8: Method of Construction</div>
-				<img src="./data/Column4.png" style="width:100%">
+				<img src="assets/Column4.png" style="width:100%">
 			</div>
 			
 			<div class="mySlides1 fade">
 				<div class="numbertext">6 / 8: Programmable Space (1)</div>
-				<img src="./data/Column - Atrium.gif" style="width:100%">
+				<img src="assets/Column - Atrium.gif" style="width:100%">
 				<div class="text">The space within the column house different programmes. Here, the space within is transformed into an atrium space with seating areas.</div>
 			</div>
 			
 			<div class="mySlides1 fade">
 				<div class="numbertext">7 / 8: Programmable Space (2)</div>
-				<img src="./data/Column - Lift.gif" style="width:100%">
+				<img src="assets/Column - Lift.gif" style="width:100%">
 				<div class="text">Smaller diameter columns can be used to house the lift core.</div>
 			</div>
 			
 			<div class="mySlides1 fade">
 				<div class="numbertext">8 / 8: Growth</div>
 				<center><video width="80%" controls>
-					<source src="./data/Column gif.mp4" type="video/mp4">
+					<source src="assets/Column gif.mp4" type="video/mp4">
 				</video></center>
 			</div>
 			
@@ -388,29 +175,7 @@
  <!-- End of Slideshow -->
 
         <div id="element"></div>
-            <script>
-            var element = document.getElementById('element');
-            var settings = {"pairs":[{"beforeImage":{"data":{"url":"https://i.imgur.com/fIWudmW.png","img_url":"https://i.imgur.com/fIWudmW.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/EeUDgLa.png","file_url":"https://i.imgur.com/EeUDgLa.png"}},"undefined":null,"caption":"Column System (25m)"},
-            {"beforeImage":{"data":{"url":"https://i.imgur.com/eKMYhCI.png","img_url":"https://i.imgur.com/eKMYhCI.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/UNXn7Ub.png","file_url":"https://i.imgur.com/UNXn7Ub.png"}},"undefined":null,"caption":"Column System (50m)"},
-            {"beforeImage":{"data":{"url":"https://i.imgur.com/2CYShMB.png","img_url":"https://i.imgur.com/2CYShMB.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/GE0CMy9.png","file_url":"https://i.imgur.com/GE0CMy9.png"}},"undefined":null,"caption":"Column System (75m)"},
-            {"beforeImage":{"data":{"url":"https://i.imgur.com/Oqor6MB.png","img_url":"https://i.imgur.com/Oqor6MB.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/jeFSSWv.png","file_url":"https://i.imgur.com/jeFSSWv.png"}},"undefined":null,"caption":"Column System (100m)"},
-            {"beforeImage":{"data":{"url":"https://i.imgur.com/qfI3x6J.png","img_url":"https://i.imgur.com/qfI3x6J.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/XQQzLHq.png","file_url":"https://i.imgur.com/XQQzLHq.png"}},"undefined":null,"caption":"Column System (125m)"}],
-            "divider-1":null,"headingText":null,"layout":"carousel","widgetWidth":"1100","imageRatio":1.5,"direction":"horizontal","labelPositionHorizontal":"end","labelPositionVertical":"center","divider-2":null,"dividerInitialPosition":65,"dividerSize":3,"dividerArrowsEnabled":false,"interactionBehaviour":"dragclick","dividerResetOnMouseOut":true,"dividerColor":"rgb(255, 255, 255)","carouselControlsColor":"rgb(0, 0, 0)"};
 
-            settings.showElfsightLogo = false;
-
-            window.eapps = {
-                apps: {
-                    register(name, Driver) {
-                        var driver = new Driver();
-
-                        driver.initWidget(element, settings)
-                    }
-                }
-            }
-            </script>
-        <script src="https://static.elfsight.com/apps/before-and-after-slider/release/fe82e1ba-be9e-4b44-861d-c6c4b3497c56/app/beforeAndAfterSlider.js"></script>
-        <center><br><defi>Image slider by elfsight.com</defi></center>
     </div>
 
     <div class="colorblock" id="p2">
@@ -425,36 +190,36 @@
 
 			<div class="mySlides2 fade">
 				<div class="numbertext">1 / 6</div>
-				<img src="./data/Facade.jpg" style="width:100%">
+				<img src="assets/Facade.jpg" style="width:100%">
 			</div>
 
 			<div class="mySlides2 fade">
 				<div class="numbertext">2 / 6: Proposed Structure</div>
-				<img src="./data/Facade1.png" style="width:100%">
+				<img src="assets/Facade1.png" style="width:100%">
 				<div class="text">The proposed structure consists of bracings in the floor that connect to the façade scaffolding. The addition of trees can improve the structural stability.</div>
 			</div>
 
 			<div class="mySlides2 fade">
 				<div class="numbertext">3 / 6: Implementation</div>
-				<img src="./data/Facade2.png" style="width:100%">
+				<img src="assets/Facade2.png" style="width:100%">
 				<div class="text">The facade system can also be combined with the column system within the same building.</div>
 			</div>
 
 			<div class="mySlides2 fade">
 				<div class="numbertext">4 / 6: Method of Construction</div>
-				<img src="./data/Facade3.png" style="width:100%">
+				<img src="assets/Facade3.png" style="width:100%">
 			</div>
 			
 			<div class="mySlides2 fade">
 				<div class="numbertext">5 / 6: Openings</div>
-				<img src="./data/Facade4.png" style="width:100%">
+				<img src="assets/Facade4.png" style="width:100%">
 				<div class="text">The windows will be slightly offset from the facade. The diagrid of the façade can also be adjusted to create entrance into the building.</div>
 			</div>
 
 			<div class="mySlides2 fade">
 				<div class="numbertext">6 / 6: Growth</div>
 				<center><video width="80%" controls>
-					<source src="./data/Facade gif.mp4" type="video/mp4">
+					<source src="assets/Facade gif.mp4" type="video/mp4">
 				</video></center>
 			</div>
 
@@ -465,32 +230,6 @@
 		</div><br><br>
 		
  <!--End of Slideshow -->
-
-
-        <div id="element2"></div>
-            <script>
-            var element = document.getElementById('element2');
-            var settings = {"pairs":[{"beforeImage":{"data":{"url":"https://i.imgur.com/kTMADlx.png","img_url":"https://i.imgur.com/kTMADlx.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/FUzq0iU.png","file_url":"https://i.imgur.com/FUzq0iU.png"}},"undefined":null,"caption":"Facade System (50m)"},
-            {"beforeImage":{"data":{"url":"https://i.imgur.com/8ZQXKMW.png","img_url":"https://i.imgur.com/8ZQXKMW.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/Nz00Hy2.png","file_url":"https://i.imgur.com/Nz00Hy2.png"}},"undefined":null,"caption":"Facade System (75m)"},
-            {"beforeImage":{"data":{"url":"https://i.imgur.com/pXkD1je.png","img_url":"https://i.imgur.com/pXkD1je.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/BsmVWEd.png","file_url":"https://i.imgur.com/BsmVWEd.png"}},"undefined":null,"caption":"Hybrid System (100m)"},
-            {"beforeImage":{"data":{"url":"https://i.imgur.com/g0c77Bo.png","img_url":"https://i.imgur.com/g0c77Bo.png"}},"afterImage":{"data":{"url":"https://i.imgur.com/Goi9ljI.png","file_url":"https://i.imgur.com/Goi9ljI.png"}},"undefined":null,"caption":"Hybrid System (125m)"}],
-            "divider-1":null,"headingText":null,"layout":"carousel","widgetWidth":"1100","imageRatio":1.5,"direction":"horizontal","labelPositionHorizontal":"end","labelPositionVertical":"center","divider-2":null,"dividerInitialPosition":65,"dividerSize":3,"dividerArrowsEnabled":false,"interactionBehaviour":"dragclick","dividerResetOnMouseOut":true,"dividerColor":"rgb(255, 255, 255)","carouselControlsColor":"rgb(0, 0, 0)"};
-
-            settings.showElfsightLogo = false;
-
-            window.eapps = {
-                apps: {
-                    register(name, Driver) {
-                        var driver = new Driver();
-
-                        driver.initWidget(element, settings)
-                    }
-                }
-            }
-            </script>
-        <script src="https://static.elfsight.com/apps/before-and-after-slider/release/fe82e1ba-be9e-4b44-861d-c6c4b3497c56/app/beforeAndAfterSlider.js"></script>
-	<center><br><defi>Image slider by elfsight.com</defi></center>
-     </div>
 
     <div class="colorblock-white" id="p3">
 		<div class="text-container">
@@ -504,35 +243,35 @@
 
 			<div class="mySlides3 fade">
 				<div class="numbertext">1 / 6</div>
-				<img src="./data/Floor.gif" style="width:100%">
+				<img src="assets/Floor.gif" style="width:100%">
 			</div>
 
 			<div class="mySlides3 fade">
 				<div class="numbertext">2 / 6: Proposed Structure</div>
-				<img src="./data/Facade1.png" style="width:100%">
+				<img src="assets/Facade1.png" style="width:100%">
 				<div class="text">The floor system is a continuation of the façade system. The proposed structure is the same as the façade system, consisting of a diagrid scaffolding façade and cross bracing in the floor. </div>
 			</div>
 
 			<div class="mySlides3 fade">
 				<div class="numbertext">3 / 6: Method of Construction (1)</div>
-				<img src="./data/Floor1.png" style="width:100%">
+				<img src="assets/Floor1.png" style="width:100%">
 			</div>
 			
 			<div class="mySlides3 fade">
 				<div class="numbertext">4 / 6: Method of Construction (2)</div>
-				<img src="./data/Floor2.png" style="width:100%">
+				<img src="assets/Floor2.png" style="width:100%">
 			</div>
 			
 			<div class="mySlides3 fade">
 				<div class="numbertext">5 / 6: Openings</div>
-				<img src="./data/Floor3.png" style="width:100%">
+				<img src="assets/Floor3.png" style="width:100%">
 				<div class="text">The levels where the floor systems are implemented will be left open for threading of the aerial roots.</div>
 			</div>
 			
 			<div class="mySlides3 fade">
 				<div class="numbertext">6 / 6: Growth</div>
 				<center><video width="80%" controls>
-					<source src="./data/Floor gif.mp4" type="video/mp4">
+					<source src="assets/Floor gif.mp4" type="video/mp4">
 				</video></center>
 			</div>
 			
@@ -545,16 +284,6 @@
  
     </div>
 
-    <div class="bottomlinks">	
-        <h3><a href="javascript:goToTop()">Back to Top</a></h3>
-        <!-- <h3><a id="random">Randomise!</a></h3> -->
-    </div>
-
-    </section>
-
-<div id="footer"></div>
-<script src="../../js/randomiser.js"></script>
-<script src="../../js/title.js"></script>
 <script>
 var slideIndex = [1,1,1];
 var slideId = ["mySlides1", "mySlides2", "mySlides3"]
